# contacts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  makefile  makefile-db
analysis/: analyze-query.sql
api/: Cargo.toml  Dockerfile  build.rs  log4rs.yaml  setup-docker.toml  setup-local.toml
api/handle-errors/: Cargo.toml
api/handle-errors/src/: lib.rs
api/images/: README.md
api/integration-tests/: Cargo.toml  setup-local.toml
api/integration-tests/migrations/: 20230817043351_users.up.sql  20230817043451_addresses.down.sql  20230817043451_addresses.up.sql  20230817123257_categories.down.sql  20230817123257_categories.up.sql  20230817123457_facebook.down.sql  20230817123557_instagram.up.sql  20230817133807_nicknames.up.sql  20230817133907_phones.up.sql  20230817134007_twitter.down.sql  20230817134107_urls.down.sql  20230817134107_urls.up.sql  20230817134307_all_data.down.sql
api/integration-tests/src/: main.rs  requests.rs
api/js/: README.md
api/migrations/: 20230817123431_emails.up.sql  20230817123657_notes.down.sql  20230817123657_notes.up.sql  20230817133807_nicknames.down.sql  20230817133907_phones.down.sql  20230817134207_users_categories.up.sql  20230817134307_all_data.up.sql  20240109201816_phones.down.sql  20240109201816_phones.up.sql
api/python/: Dockerfile  README.md  TODO.md  alembic.ini  main.py  makefile  requirements-dev.txt  requirements.txt
api/python/bruno/: README.md
api/python/migrations/: env.py
api/python/src/: database.py  db.py  models.py
api/rust/: Cargo.toml  Dockerfile  setup-local.toml
api/rust/integration-tests/: Cargo.toml
api/rust/integration-tests/src/: main.rs
api/rust/migrations/: 20230817043351_users.down.sql  20230817043351_users.up.sql  20230817043451_addresses.up.sql  20230817123431_emails.down.sql  20230817123457_facebook.up.sql  20230817123557_instagram.down.sql  20230817134007_twitter.up.sql  20230817134207_users_categories.down.sql
api/rust/src/: lib.rs
api/rust/src/routes/: contact.rs
api/rust/src/transformers/: types.rs
api/rust/src/types/: query.rs
api/src/: config_api.rs  lib.rs  main.rs  store.rs
api/src/routes/: contact.rs
cli/: Cargo.toml  Dockerfile  setup-docker.toml  setup-local.toml
cli-js/: README.md
cli-python/: Dockerfile  README.md  main.py  makefile
cli-python/src/: constants.py  export.py  main.py  search.py
cli/src/: main.rs
contacts/: Cargo.toml  Dockerfile  contacts.csv  contacts.json  makefile  setup-docker.toml  setup-local.toml
contacts/handle-errors/src/: lib.rs
contacts/src/: cli.rs  contact.rs  file_csv.rs  html.rs  main-cli.rs  main-to-add.rs  main.rs  store.rs
contacts/src/routes/: contact.rs
contacts/src/types/: contact.rs
contacts_reader/: Cargo.toml
contacts_reader/src/: main.rs
front/: contacts.css  contacts.hml  contacts.html  contacts.js
(+29 files in other folders)
