[package]
name = "contacts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.6.3", features = [ "postgres", "runtime-tokio-rustls" ]}
tokio = { version = "1.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }

