[package]
name = "handle-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["postgres"] }
# TODO check if feature log is required
# sqlx = { version = "0.5", features = ["postgres"] }
tracing = "0.1"
warp = "0.3"
