[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../",  version = "0.1.0" }
futures-util = "0.3"
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.1.1", features = ["full"] }

