[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", features = ["toml"] }
csv = "1.2.1"
derivative = "2.1.1" # After removing the crate log4rs, this dependency is necessary.
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
tokio = { version = "1.2", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }

[build-dependencies]
platforms = "2.0.0"

