[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../",  version = "0.1.0" }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.1.1", features = ["full"] }
